Fix: center logo in navbar, fix bestsellers for 14 inch, fix carousel arrows visibility

--- a/design.css
+++ b/design.css
@@ -19,33 +19,35 @@ nav{
     background-color: #fff;
 }
 
-/* nav div{
-    width: 100%;
-    height: 100%;
-} */
-
-#icons svg{
-    width: 30px;
-    height: 30px;
+#links{
+    flex: 1;
+    display: flex;
+    gap: 25px;
+    align-items: center;
 }
 
-#icons{
+#logo{
+    flex: 0 0 auto;
     display: flex;
-    gap: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 #logo img{
     width: 200px;
     height: 38px;
-    /* position: absolute; */
 }
 
-#logo{
+#icons{
+    flex: 1;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    /* position: absolute; */
-    /* margin-left: 50%; */
+    justify-content: flex-end;
+    gap: 20px;
+}
+
+#icons svg{
+    width: 30px;
+    height: 30px;
 }
 
 .mainHead {
@@ -53,12 +55,6 @@ nav{
     font-size: 20px;
     font-weight: 400;
     color: black;
-}
-
-#links{
-    display: flex;
-    gap: 25px;
-    align-items: center;
 }
 
 
@@ -339,7 +335,7 @@ main{
 
 #arrow{
     position: absolute;
-    z-index: 2;
+    z-index: 10;
     top: 50%;
     transform: translateY(-50%);
     left: 0;
@@ -1457,18 +1453,19 @@ main{
 
 .blogGrid{
     display: flex;
-    gap: 25px;
-    padding: 0 40px;
+    gap: 20px;
+    padding: 0 30px;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
-    max-width: 1280px;
+    max-width: 100%;
     margin: 0 auto;
     justify-content: center;
+    flex-wrap: nowrap;
 }
 
 .blogBox{
-    width: 260px;
-    height: 170px;
+    width: 240px;
+    height: 160px;
     border-radius: 10px;
     overflow: hidden;
     flex-shrink: 0;
@@ -1501,8 +1498,8 @@ main{
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
-    flex: 0 0 260px;
-    max-width: 260px;
+    flex: 0 0 240px;
+    max-width: 240px;
     scroll-snap-align: start;
 }
 
